--- a/src/css/App.css
+++ b/src/css/App.css
@@ -32,6 +32,7 @@
   flex-direction: column;
   background-color: var(--bg-color);
   color: white;
+  overflow: auto;
 }
 
 .app .content {
